@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 9, 2011</p>
+      <p>Last Updated: March 11, 2011</p>
     </td>
   </tr>
 </table>
@@ -2159,6 +2159,13 @@ nuttx-5.19 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
     * drivers/uart_16550.c and include/nuttx/uart_16550.h - Support for a generic
       16550 UART.
     * configure/qemu-i486/nsh - QEMU NSH example.
+    * ../apps - The apps directory add-on was created by Uros Platise.  It
+      supports a set of end-user applications than can be executed on top of
+      NSH.  Think of it this way:  In a buckled-up embedded application, your
+      end-user programs will probably have their own dedicated start-up logic.
+      But, during development, you might want to have you applications
+      available and executable from the NSH command line.  This apps/ addon
+      (and NSH hooks) was contributed by Uros to accomplish just that.
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
